fix carousel.css - proper height, width, overlap and hidden effect. + minor css fixes on main css + footer 3d copyright signature and changed to full bottom, insted of fixed bottom.

--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -7,49 +7,55 @@ div.carousel {
     transition: all 0.33s ease-in-out;
   }
   ul {
+    position: relative;
     height: 100%;
+    width: 100%;
     overflow: hidden;
     li {
       height: 100%;
       img {
         position: absolute;
         top: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
         opacity: 0;
+        object-fit: contain;
         &.carousel-current {
           opacity: 1;
+          z-index:3;
+          height:100%;
+          width:50%;
           left: 50%;
-          max-height: 85%;
-          max-width: 50%;
+          transform: translate(-50%, -50%);
         }
         &.carousel-previous,
         &.carousel-next {
           opacity: 1;
-          max-height: 30%;
-          max-width: 20%;
+          z-index: 2;
+          height: 40%;
+          width: 23%;
           position: absolute;
           top: 50%;
-          transform: translateY(-50%);
-          margin: 0 1rem;
-          padding: 3rem 1rem;
-          border-radius: 5px;
-          cursor: pointer; 
+          transform: translate(-50%,-50%);
+          border-radius: 3px;
           &:hover {
-            background-color: hsla(0, 0%, 80%, 0.15);
-            box-shadow: 0 0 5px 3px hsla(0, 0%, 80%, 0.25);
+            cursor: pointer; 
+            background-color: hsla(289, 21%, 81%, 0.15);
+            box-shadow: 0 0 5px 3px hsla(289, 21%, 81%, 0.25);
           }
         }
         &.carousel-previous {
-          left: 15%;
+          left: 12.5%;
         }
         &.carousel-next {
-          left: 85%;
+          left: 87.5%;
         }
         &.carousel-hidden {
           opacity: 0;
+          z-index: 1;
           left: 50%;
-          max-height: 5%;
-          max-width: 5%;
+          height: 5%;
+          width: 5%;
         }
       }
     }
@@ -67,7 +73,7 @@ div.carousel {
       background-color: var(--medium-purple);
       &.carousel-dots-active {
         background-color: var(--light-purple);
-        scale: 1.25;
+        scale: 1.33;
       }
     }
   }
