--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,8 +73,8 @@
   height: 3rem;
   width: 3rem;
   border-radius: 50%;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 #nav-gallery ul figure figcaption {
   display: none;
@@ -163,7 +163,7 @@
   margin: 0 0 2rem 0;
 }
 #sculptures div.carousel {
-  width: 120%;
+  width: 100%;
   height: 65vh;
 }
 
@@ -206,10 +206,13 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  text-align: end;
-  padding: 0 5rem;
+  text-align: center;
+  padding: 0 5rem 1rem 0;
   background-color: transparent;
 }
 footer p {
   background-color: transparent;
+  font-size: 1.5rem;
+  color: hsla(0, 0%, 0%, .5);
+  text-shadow: 1px 1px 0px hsla(289, 21%, 81%, .85);
 }
